# bws

./: .gitignore  Cargo.toml  README.md  build.rs  launch.sh
assets/nbt/: dimension_codec.nbt
bws/: .gitignore  Cargo.toml  README.md  build.rs  launch.sh
bws.old/: Cargo.toml
bws.old/src/: lib.rs  linear_search.rs  serverbase.rs
bws.old/src/application/: mod.rs
bws.old/src/serverbase/: legacy_ping.rs  store.rs
bws/assets/: dimension_codec.snbt
bws/bws-plugin/: Cargo.toml
bws/bws-plugin/src/: events.rs  lib.rs  pointers.rs  register.rs  slice.rs  string.rs  tuples.rs  vec.rs  vtable.rs
bws/bws-plugin/src/pointers/: global_state.rs  mod.rs  plugin_gate.rs
bws/bws-plugin/src/stable_types/: global_state.rs  mod.rs  slice.rs  string.rs  tuples.rs  unit.rs  vec.rs
bws/bws-plugin/src/stable_types/global_state/: plugins.rs
bws/protocol/: Cargo.toml
bws/protocol-derive/: Cargo.toml  diff
bws/protocol-derive/src/: lib.rs
bws/protocol-derive/tests/: simple.rs
bws/protocol/src/: commands_builder.rs  datatypes.rs  lib.rs  macros.rs  packets.rs  serializer.rs
bws/protocol/src/datatypes/: chat_parse.rs  entity_metadata.rs  implementations.rs
bws/src/: chat_parse.rs  cli.rs  cmd.rs  data.rs  datatypes.rs  global_state.rs  graceful_shutdown.rs  handle_connection.rs  internal_communication.rs  lib.rs  linear_search.rs  logging.rs  main.rs  map.rs  networking.rs  opt.rs  packets.rs  plugins.rs  server.rs  serverbase.rs  shared.rs  shutdown.rs  stream_handler.rs  vtable.rs  world.rs
bws/src/application/: logging.rs  mod.rs
bws/src/networking/: legacy_ping.rs
bws/src/plugins/: events.rs  vtable.rs
bws/src/protocol/: datatypes.rs  mod.rs  packets.rs
bws/src/serverbase/: legacy_ping.rs  store.rs
bws/src/vtable/: cmd.rs  event.rs  plugin_api.rs
bws/src/world/: lobby.rs  login.rs
bws_plugin_api/: Cargo.toml
bws_plugin_api/src/: lib.rs
bws_plugin_api_derive/: Cargo.toml
bws_plugin_api_derive/src/: lib.rs
bws_plugin_interface/: Cargo.toml
bws_plugin_interface/src/: global_state.rs  init_vtable.rs  lib.rs  macros.rs  plugin_api.rs  safe_types.rs  stream.rs  vtable.rs
bws_plugin_interface/src/safe_types/: mut_slice.rs  result.rs  slice.rs  str.rs  string.rs  vec.rs
example/: Cargo.toml
example/src/: main.rs
graceful_exit/: Cargo.toml
graceful_exit/src/: lib.rs
protocol/: Cargo.toml
protocol-derive/: Cargo.toml
protocol-derive/src/: lib.rs
protocol-derive/tests/: enum_inlining.rs  lifetimes.rs  simple.rs
protocol/src/: box.rs  bstring.rs  commands_builder.rs  datatypes.rs  datatypes_old.rs  deserializer.rs  json.rs  lib.rs  macros.rs  nbt.rs  option.rs  packets.rs  primitive_impls.rs  string.rs  uuid.rs  varint.rs  vec.rs
protocol/src/datatypes/: chat_parse.rs  implementations.rs
protocol/src/from_bytes/: impls.rs  mod.rs
protocol/src/nbt/: read.rs  write.rs
protocol/src/newtypes/: bstring.rs  mod.rs  nextstate.rs  varint.rs  varlong.rs
protocol/src/packets/: handshake.rs  legacy_ping.rs  login.rs  status.rs
protocol/src/to_bytes/: impls.rs  mod.rs
protocol/tests/: tests.rs
safe_types/: Cargo.toml
safe_types/src/: lib.rs  maybe_panicked.rs  option.rs  result.rs  slice.rs  str.rs  string.rs  tuples.rs  unit.rs  vec.rs
src/: chat_parse.rs  clone_all.rs  collision.rs  data.rs  datatypes.rs  dimension_codec.nbt  extra.rs  global_state.rs  incl_macro.rs  internal_communication.rs  lib.rs  macros.rs  main.rs  map.rs  packets.rs  shared.rs  stream_handler.rs  world.rs
src/global_state/: plugin.rs  vtable.rs
src/protocol/: datatypes.rs  packets.rs  serializer.rs
src/world/: lobby.rs  login.rs
