[package]
name = "bws"
version = "1.0.0"
authors = ["Ponas <mykolas.peteraitis@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.6", features = ["full"] }
structopt = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
futures = "0.3"
slab = "0.4.2"
hematite-nbt = "0.5.1"
flate2 = { version = "1.0", features = ["tokio"] }
sha2 = "0.9"
scopeguard = "1.1"
lazy_static = "1.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"
ctrlc = "3.1.9"