[package]
name = "bws"
version = "0.5.0"
authors = ["Ponas <mykolas.peteraitis@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"
once_cell = "1.17.0"
clap = { version = "4.0.32", features = ["derive", "env", "unicode", "string"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-forest =  { version = "0.1.5", features = ["chrono", "ansi"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
ctrlc = "3.2.5"
human-panic = "1.1.4"
