[package]
name = "bws"
version = "0.6.0"
authors = ["Ponas <mykolas.peteraitis@gmail.com>"]
edition = "2021"

[dependencies]
once_cell = "1.17.0"
tracing = "0.1.37"
tokio = { version = "1", features = ["full"] }
tracing-forest =  { version = "0.1.5", features = ["chrono", "ansi"], optional = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"], optional = true }
ctrlc = { version = "3.2.5", optional = true }
human-panic = { version = "1.1.4", optional = true }

[features]
application = ["ctrlc", "human-panic", "tracing-forest", "tracing-subscriber"]
default = ["application"]