[package]
name = "bws_plugin_interface"
version = "0.2.0"
edition = "2021"

[dependencies]
once_cell = { version = "1.17.0", optional = true }
bws_plugin_api = { path = "../bws_plugin_api/", default-features = false }
safe_types = { path = "../safe_types/" }

[features]
default = ["plugin"]
plugin = ["once_cell"]
