[package]
name = "protocol"
version = "0.1.0"
edition = "2018"

[dependencies]
protocol-derive = { path = "../protocol-derive", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bitflags = "1.2"
safe_types = { path = "../../safe_types", default-features = false, optional = true }

[features]
default = ["ser"]
# Enables functionality of serializing/deserializing the data types and packets
ser = ["serde", "serde_json", "protocol-derive"]
# Makes all the types #[repr(C)] and FFI-safe
ffi_safe = ["safe_types"]